--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "33.0.0"
 
     defaultConfig {
-        applicationId "com.webianks.popupbubble"
+        applicationId "com.nextcloud.ui.popupbubble"
         minSdkVersion 19
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0.0"
     }
     buildTypes {
         release {
